--- a/src/app/modules/profile/post/modal/new-post/new-post.component.scss
+++ b/src/app/modules/profile/post/modal/new-post/new-post.component.scss
@@ -8,3 +8,19 @@
   background-color: rgba(214, 229, 235, 0.945);
   pointer-events: none;
 }
+
+.new-post {
+  height: 100%;
+}
+
+.new-post-title {
+  width: 90%;
+}
+
+.new-post-text {
+  width: 90%;
+}
+
+.new-post-image {
+  width: 90%;
+}
