--- a/src/app/modules/profile/profile.component.scss
+++ b/src/app/modules/profile/profile.component.scss
@@ -1,18 +1,20 @@
-.main-panel {
-  width: 77%;
-  float: right;
+.profile {
+  display: inline-flex;
   position: absolute;
-  margin: 1% 0% 0% 22%;
-  height: 90% !important;
-  overflow-y: scroll;
+  top: 2px;
+  width: 100%;
+  height: 99%;
 }
 
 .left-panel {
-  position: absolute;
-  width: 20%;
-  float: left;
-  margin: 1%;
-  height: 90% !important;
+  width: 30%;
+  margin: 2px;
+}
+
+.main-panel {
+  width: 100%;
+  margin: 2px;
+  overflow-y: auto;
 }
 
 .profile-avatar {
@@ -50,4 +52,9 @@ strong {
   width: 200px;
   position: absolute;
   top: 25px;
+}
+
+.profile-avatar {
+  background-image: url('/assets/images/avatar.png');
+  background-size: cover;
 }
