--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+.background {
+  background-image: url('/assets/images/background.png') !important;
+}
