--- a/src/app/modules/profile/modal/user-settings/user-settings.component.html
+++ b/src/app/modules/profile/modal/user-settings/user-settings.component.html
@@ -1,1 +1,53 @@
-<p>user-settings works!</p>
+<mat-card class="user-settings">
+  <mat-card-header>
+    <mat-card-title>My Settings</mat-card-title>
+    <mat-card-subtitle></mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-grid-list cols="3" rowHeight="60px">
+      <mat-grid-tile [colspan]="1" [rowspan]="2">
+        <div mat-card-avatar class="profile-avatar"></div>
+      </mat-grid-tile>
+      <mat-grid-tile [colspan]="2" [rowspan]="1">
+        <mat-form-field>
+          <input type="text" matInput placeholder="Firstname" value="{{ (user$ | async)?.firstname }}" />
+          <mat-error *ngIf="false"></mat-error>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile [colspan]="2" [rowspan]="1">
+        <mat-form-field>
+          <input type="text" matInput placeholder="Lastname" value="{{ (user$ | async)?.lastname }}" />
+          <mat-error *ngIf="false"></mat-error>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile [colspan]="3" [rowspan]="1">
+        <mat-form-field>
+          <input type="email" matInput placeholder="Email" value="{{ (user$ | async)?.email }}" />
+          <mat-error *ngIf="false"></mat-error>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile [colspan]="3" [rowspan]="1">
+        <mat-form-field>
+          <input type="date" matInput placeholder="Birthdate" value="{{ (user$ | async)?.birthdate }}" />
+          <mat-error *ngIf="false"></mat-error>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile [colspan]="3" [rowspan]="1">
+        <mat-form-field>
+          <input appPhone type="text" matInput placeholder="Phone" value="{{ (user$ | async)?.phone }}" />
+          <mat-error *ngIf="false"></mat-error>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile [colspan]="3" [rowspan]="1">
+        <mat-form-field>
+          <input type="password" matInput placeholder="Password" value="{{ (user$ | async)?.password }}" />
+          <mat-error *ngIf="false"></mat-error>
+        </mat-form-field>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>Cancel</button>
+    <button mat-button>Save</button>
+  </mat-card-actions>
+</mat-card>
