--- a/src/app/modules/profile/modal/user-settings/user-settings.component.html
+++ b/src/app/modules/profile/modal/user-settings/user-settings.component.html
@@ -3,14 +3,14 @@
     <mat-card-title>My Settings</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
   </mat-card-header>
-  <mat-divider></mat-divider>
+  <mat-divider [inset]="true"></mat-divider>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <mat-card-content>
-      <mat-grid-list cols="3" rowHeight="60px">
-        <mat-grid-tile [colspan]="1" [rowspan]="2">
+      <mat-grid-list cols="3" rowHeight="10px">
+        <mat-grid-tile [colspan]="1" [rowspan]="14">
           <div mat-card-avatar class="profile-avatar"></div>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="2" [rowspan]="1">
+        <mat-grid-tile [colspan]="2" [rowspan]="7" class="tile-field">
           <mat-form-field appearance="fill">
             <input
               type="text"
@@ -19,11 +19,11 @@
               placeholder="Firstname"
               value="{{ (user$ | async)?.firstname }}"
             />
-            <mat-error *ngIf="false"></mat-error>
+            <mat-error *ngIf="firstName.errors">{{ errorFieldService.getFieldError(firstName.errors) }}</mat-error>
           </mat-form-field>
-          <mat-icon class="edit" (click)="enable(firstname)" matSuffix>edit</mat-icon>
+          <mat-icon class="edit" (click)="enable(firstName)" matSuffix>edit</mat-icon>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="2" [rowspan]="1">
+        <mat-grid-tile [colspan]="2" [rowspan]="7" class="tile-field">
           <mat-form-field appearance="fill">
             <input
               type="text"
@@ -32,11 +32,14 @@
               placeholder="Lastname"
               value="{{ (user$ | async)?.lastname }}"
             />
-            <mat-error *ngIf="false"></mat-error>
+            <mat-error *ngIf="lastName.errors">{{ errorFieldService.getFieldError(lastName.errors) }}</mat-error>
           </mat-form-field>
-          <mat-icon class="edit" (click)="enable(lastname)" matSuffix>edit</mat-icon>
+          <mat-icon class="edit" (click)="enable(lastName)" matSuffix>edit</mat-icon>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="3" [rowspan]="1">
+        <mat-grid-tile [colspan]="3" [rowspan]="1" class="tile-divider">
+          <mat-divider></mat-divider>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="3" [rowspan]="7" class="tile-field">
           <mat-form-field appearance="fill">
             <input
               type="email"
@@ -47,11 +50,11 @@
             />
             <mat-icon matPrefix>email</mat-icon>
             <mat-icon class="verified" matSuffix>verified</mat-icon>
-            <mat-error *ngIf="false"></mat-error>
+            <mat-error *ngIf="email.errors">{{ errorFieldService.getFieldError(email.errors) }}</mat-error>
           </mat-form-field>
-          <mat-icon class="edit" (click)="enable(email)" matSuffix>edit</mat-icon>
+          <mat-icon class="edit" (click)="enable(form.get('email'))" matSuffix>edit</mat-icon>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="3" [rowspan]="1">
+        <mat-grid-tile [colspan]="3" [rowspan]="7" class="tile-field">
           <mat-form-field appearance="fill">
             <input
               type="text"
@@ -63,29 +66,26 @@
             />
             <mat-icon matPrefix>phone</mat-icon>
             <mat-icon class="verified" matSuffix>verified</mat-icon>
-            <mat-error *ngIf="false"></mat-error>
+            <mat-error *ngIf="phone.errors">{{ errorFieldService.getFieldError(phone.errors) }}</mat-error>
           </mat-form-field>
-          <mat-icon class="edit" (click)="enable(phone)" matSuffix>edit</mat-icon>
+          <mat-icon class="edit" (click)="enable(form.get('phone'))" matSuffix>edit</mat-icon>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="3" [rowspan]="1">
+        <mat-grid-tile [colspan]="3" [rowspan]="7">
           <mat-form-field appearance="fill">
-            <input
-              type="date"
-              formControlName="date"
-              matInput
-              placeholder="Birthdate"
-              value="{{ (user$ | async)?.birthdate }}"
-            />
+            <mat-label>Birthdate</mat-label>
             <mat-icon matPrefix>cake</mat-icon>
-            <mat-error *ngIf="false"></mat-error>
+            <input
+              matInput
+              formControlName="birthdate"
+              value="{{ (user$ | async)?.birthdate }}"
+              [matDatepicker]="picker1"
+            />
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1 color="primary"></mat-datepicker>
           </mat-form-field>
-          <mat-icon class="edit" (click)="enable(birthdate)" matSuffix>edit</mat-icon>
+          <mat-icon class="edit" (click)="enable(form.get('birthdate'))" matSuffix>edit</mat-icon>
         </mat-grid-tile>
       </mat-grid-list>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>Cancel</button>
-      <button mat-button type="submit">Save</button>
-    </mat-card-actions>
   </form>
 </mat-card>
