--- a/src/app/modules/profile/modal/user-settings/user-settings.component.scss
+++ b/src/app/modules/profile/modal/user-settings/user-settings.component.scss
@@ -1,3 +1,6 @@
+.user-settings {
+  height: 100%;
+}
 .profile-avatar {
   background-image: url('/assets/images/avatar.png');
   background-size: cover;
@@ -21,4 +24,12 @@ mat-form-field {
   &:hover {
     color: initial;
   }
+}
+
+.tile-field {
+  margin-top: 5px;
+}
+
+.tile-divider {
+  height: 1px !important;
 }
