--- a/src/app/modules/profile/user-panel/user-panel.component.html
+++ b/src/app/modules/profile/user-panel/user-panel.component.html
@@ -19,7 +19,13 @@
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <p>Bonjour, Je suis ingénieur informaticien</p>
+    <p>
+      Ingénieur Informaticien diplômé depuis 2015 de l‘Institut Supérieur de Sciences Appliquées et de Technologie de
+      Sousse, occupant le poste d'un consultant FullStack js chez Synopsia. Je suis en recherche permanente de nouveaux
+      challenges, et intéressé à savoir et découvrir l'évolution de l'informatique. Au-delà des technologies, j’accorde
+      une immense importance à mon environnement et mon cadre de travail (valeurs, communication, partage, rigueur,
+      ambiance,…). Mes compétences évoluent au rythme des évolutions technologiques et méthodologiques.
+    </p>
   </mat-card-content>
   <mat-card-actions></mat-card-actions>
 </mat-card>
