--- a/src/app/modules/profile/modal/user-settings/user-settings.component.scss
+++ b/src/app/modules/profile/modal/user-settings/user-settings.component.scss
@@ -33,3 +33,20 @@ mat-form-field {
 .tile-divider {
   height: 1px !important;
 }
+
+.close-modal {
+  float: right;
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  &:hover {
+    background-color: #c5c5c5;
+    border-radius: 5px;
+  }
+}
+
+.confirmation {
+  font-size: 15px;
+  height: auto;
+  width: auto;
+}
