--- a/src/app/modules/profile/user-panel/user-panel.component.html
+++ b/src/app/modules/profile/user-panel/user-panel.component.html
@@ -18,6 +18,7 @@
       {{ (user$ | async)?.lastname | uppercase }}
     </mat-card-subtitle>
   </mat-card-header>
+  <mat-divider></mat-divider>
   <mat-card-content>
     <p>
       Ingénieur Informaticien diplômé depuis 2015 de l‘Institut Supérieur de Sciences Appliquées et de Technologie de
