--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,14 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+$baseColor: #b0bec5;
+$primaryColor: #9e9e9e;
 
 .background {
-  background-image: url('/assets/images/background.png') !important;
+  background-color: $baseColor;
 }
 
 mat-icon {
   &:hover {
-    color: #992233;
+    color: $primaryColor;
   }
 }
 
