--- a/src/app/modules/profile/user-panel/user-panel.component.scss
+++ b/src/app/modules/profile/user-panel/user-panel.component.scss
@@ -18,7 +18,7 @@
 }
 
 .bio .textarea {
-  overflow-y: hidden;
+  overflow-y: scroll;
   max-height: 200px !important;
   min-height: 150px !important;
   height: auto !important;
