--- a/src/app/modules/profile/modal/new-post/new-post.component.scss
+++ b/src/app/modules/profile/modal/new-post/new-post.component.scss
@@ -24,3 +24,15 @@
 .new-post-image {
   width: 90%;
 }
+
+.label-add-new-post {
+  width: 100%;
+  margin: 40px;
+}
+
+.image-resize {
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto !important;
+  width: auto;
+}
