--- a/src/app/modules/profile/post/post.component.scss
+++ b/src/app/modules/profile/post/post.component.scss
@@ -1,4 +1,5 @@
 @import '../../../app.component.scss';
+@import '../../../../styles.scss';
 
 .post-card {
   margin: 5px;
@@ -24,6 +25,21 @@
   margin: 1%;
   height: 100%;
   white-space: break-spaces;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  overflow-y: hidden;
+  position: relative;
+}
+
+.post-text .read-more {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  padding: 30px 0;
+  background-image: linear-gradient(to bottom, transparent, $baseColor);
+  cursor: pointer;
+  &:hover {
+    background-image: linear-gradient(to bottom, transparent, $secondaryColor);
+  }
 }
