--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 $baseColor: #b0bec5;
 $primaryColor: #9e9e9e;
+$secondaryColor: #5a5a5a;
 
 .background {
   background-color: $baseColor;
